updated code and added rag pattern demo

--- a/demo_03.ipynb
+++ b/demo_03.ipynb
@@ -153,7 +153,7 @@
     "    await memory.SaveInformationAsync(collection: \"aboutMe\", id: item.Key, text: item.Value);\n",
     "}\n",
     "\n",
-    "memory.SaveReferenceAsync()"
+    "//memory.SaveReferenceAsync()"
    ]
   },
   {
