--- a/demo_04.ipynb
+++ b/demo_04.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "#r \"nuget:Microsoft.SemanticKernel, 1.16.2\"\n",
     "#r \"nuget:Microsoft.SemanticKernel.Plugins.Core, 1.16.2-alpha\"\n",
+    "#r \"nuget:Microsoft.SemanticKernel.Connectors.AzureAISearch, 1.16.2-alpha\"\n",
+    "#r \"nuget:Microsoft.SemanticKernel.Plugins.Memory, 1.16.2-alpha\"\n",
     "#r \"nuget:dotenv.net, 3.0.0\"\n",
     "\n",
     "#r \"nuget:Microsoft.KernelMemory.Core, 0.69.240727.1\""
@@ -55,8 +57,17 @@
     "using Microsoft.KernelMemory;\n",
     "using Microsoft.SemanticKernel;\n",
     "using Microsoft.SemanticKernel.ChatCompletion;\n",
+    "using Microsoft.SemanticKernel.Connectors.OpenAI;\n",
+    "using Microsoft.SemanticKernel.Plugins.Core;\n",
+    "using Microsoft.SemanticKernel.Memory;\n",
     "using Microsoft.Extensions.Configuration;\n",
+    "using dotenv.net;\n",
+    "using dotenv.net.Utilities;\n",
     "\n",
+    "DotEnv.Load();\n",
+    "\n",
+    "var openai_endpoint = EnvReader.GetStringValue(\"OPENAI_ENDPOINT\");\n",
+    "var openai_key = EnvReader.GetStringValue(\"OPENAI_KEY\");\n",
     "var azureOpenAITextConfig = new AzureOpenAIConfig();\n",
     "var azureOpenAIEmbeddingConfig = new AzureOpenAIConfig();\n",
     "var azureAISearchConfigWithHybridSearch = new AzureAISearchConfig();\n",
@@ -75,7 +86,7 @@
     "            .WithAzureOpenAITextEmbeddingGeneration(azureOpenAIEmbeddingConfig)\n",
     "            .WithAzureAISearchMemoryDb(azureAISearchConfigWithHybridSearch)\n",
     "            .WithSearchClientConfig(new SearchClientConfig { MaxMatchesCount = 2, Temperature = 0, TopP = 0 })\n",
-    "            .Build<MemoryServerless>();"
+    "            .Build<MemoryServerless>();\n"
    ]
   },
   {
@@ -117,90 +128,22 @@
    },
    "outputs": [],
    "source": [
-    "var answer = await memory.AskAsync(\"What is Semantic Kernel?\");\n",
+    "var answer = await memory.AskAsync(\"What is Semantic Kernel?\", index:\"demo_04\");\n",
     "\n",
-    "answer\n",
+    "answer.Result.ToString().DisplayAs(\"text/markdown\");\n",
     "\n",
-    "// foreach (var x in answer.RelevantSources)\n",
-    "// {\n",
-    "//     Console.WriteLine($\"  * {x.SourceName} -- {x.Partitions.First().LastUpdate:D}\");\n",
-    "// }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ChatHistory history = [];   // add chatHistory\n",
-    "\n",
-    "var chatCompletionService = kernel.GetRequiredService<IChatCompletionService>();\n",
-    "\n",
-    "while (true)\n",
+    "foreach (var x in answer.RelevantSources)\n",
     "{\n",
-    "    Console.Write(\"User > \");\n",
+    "    Console.WriteLine($\"  * {x.SourceName} -- {x.Partitions.First().LastUpdate:D}\");\n",
+    "}\n",
     "\n",
-    "    var question = await Microsoft.DotNet.Interactive.Kernel.GetInputAsync(\"Enter your message (type EXIT to quit):\");\n",
+    "var prompt = @\"\n",
+    "            Question to Kernel Memory: {{$input}}\n",
     "\n",
-    "    if (question.ToLower() == \"exit\" || String.IsNullOrEmpty(question))\n",
-    "    {\n",
-    "        break;\n",
-    "    }\n",
+    "            Kernel Memory Answer: {{memory.ask}}\n",
     "\n",
-    "    Console.Write(question);\n",
-    "    Console.WriteLine();\n",
-    "\n",
-    "    //var result = chatCompletionService.GetStreamingChatMessageContentsAsync(history, kernel: kernel);  // replace request with history\n",
-    "    var answer = await memory.AskAsync(question, index: \"demo_04\", minRelevance: 0.76);\n",
-    "\n",
-    "    history.AddUserMessage(question);       // add user message to history  \n",
-    "    history.AddAssistantMessage(answer.Result);    // add assistant message to history\n",
-    "\n",
-    "    string fullMessage = \"\";\n",
-    "    Console.Write(\"Assistant > \");\n",
-    "\n",
-    "    await foreach (var content in result)\n",
-    "    {\n",
-    "        Console.Write(content.Content);\n",
-    "        fullMessage += content.Content;\n",
-    "    }\n",
-    "\n",
-    "    history.AddAssistantMessage(fullMessage);  // add assistant message to history\n",
-    "\n",
-    "    Console.WriteLine();\n",
-    "    Console.WriteLine();\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var embeddingQuestion = $\"\n",
-    " \";"
+    "            If the answer is empty say 'I don't know', otherwise reply with a business mail to share the answer.\n",
+    "            \";answer"
    ]
   }
  ],
