added visibility to the messages send to Azure OpenAI

--- a/demo_02.ipynb
+++ b/demo_02.ipynb
@@ -16,6 +16,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import packages\n",
+    "\n",
+    "Here are some nuget packages we need to import. Notice the Microsoft.SemanticKernel version number"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -40,6 +49,19 @@
     "\n",
     "#r \"nuget:dotenv.net, 3.0.0\"\n",
     "#r \"nuget:SimpleFeedReader, 1.0.9\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set/Get Environment variables\n",
+    "\n",
+    "Make sure you have a .env file created in the root with the following 2 keys:\n",
+    "\n",
+    "OPENAI_ENDPOINT=https://[your resource]-[region].openai.azure.com/\n",
+    "\n",
+    "OPENAI_KEY=xxxxxxx"
    ]
   },
   {
@@ -68,6 +90,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup plugins\n",
+    "\n",
+    "Notice we also create a logging http client handler, that will inspect all the messages send to Azure Open AI. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -93,6 +124,10 @@
     "using Microsoft.SemanticKernel.Plugins.Core;\n",
     "using System.ComponentModel;\n",
     "using SimpleFeedReader;\n",
+    "using System.Text.Json;\n",
+    "using System.Net.Http;\n",
+    "using System.Threading;\n",
+    "using JsonSerializer = System.Text.Json.JsonSerializer;\n",
     "\n",
     "public class NewsPlugin {\n",
     "    [KernelFunction(\"get_news\")]\n",
@@ -112,7 +147,24 @@
     "    {\n",
     "        await System.IO.File.WriteAllTextAsync($\"{System.IO.Directory.GetCurrentDirectory()}\\\\{filename}\", data);\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "class LoggingHttpClientHandler : HttpClientHandler\n",
+    "{\n",
+    "    protected override async Task<HttpResponseMessage> SendAsync(\n",
+    "        HttpRequestMessage request, CancellationToken cancellationToken)\n",
+    "    {\n",
+    "        if (request.Content is not null)\n",
+    "        {\n",
+    "            var content = await request.Content.ReadAsStringAsync(cancellationToken);\n",
+    "            var json = JsonSerializer.Serialize(JsonSerializer.Deserialize<JsonDocument>(content),\n",
+    "                new JsonSerializerOptions { WriteIndented = true });\n",
+    "            Console.WriteLine(json);\n",
+    "        }\n",
+    "\n",
+    "        return await base.SendAsync(request, cancellationToken);\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -131,11 +183,14 @@
    },
    "outputs": [],
    "source": [
+    "var client = new HttpClient(new LoggingHttpClientHandler());\n",
+    "\n",
     "var builder = Microsoft.SemanticKernel.Kernel.CreateBuilder();\n",
     "builder.AddAzureOpenAIChatCompletion(\n",
     "         \"gpt-4o\",         // Azure OpenAI Deployment Name. Make sure this is correct\n",
     "         openai_endpoint,  // Azure OpenAI Endpoint\n",
-    "         openai_key);      // Azure OpenAI Key\n",
+    "         openai_key,\n",
+    "         httpClient: client);      // Azure OpenAI Key\n",
     "\n",
     "builder.Services.AddLogging(c => c.AddDebug()\n",
     "                                  .SetMinimumLevel(LogLevel.Trace) // don't do this in production!\n",
@@ -155,45 +210,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "var prompt = \"what's up today?\";\n",
-    "var result = await kernel.InvokePromptAsync(prompt, new(executionSettings));\n",
-    "result.ToString().DisplayAs(\"text/markdown\");\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var prompt = \"What's happening in the world of sports?\";\n",
-    "var result = await kernel.InvokePromptAsync(prompt, new(executionSettings));\n",
-    "result.ToString().DisplayAs(\"text/markdown\");\n"
+    "## Send a prompt\n",
+    "\n",
+    "Notice how the http client handler displays the message send to the Azure Open AI Service. Have a special look at the tools being used"
    ]
   },
   {
